Fix profile image to be clipped to fit within the circle

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -132,6 +132,7 @@ div.content
 {
     width: 200px;
     height: 200px;
+    object-fit: cover;
 }
 .info
 {
